lists stay open when you are on the same page as their category, but this interferes with collapsing them (need to fix)

--- a/newDocs/doxx_template.css
+++ b/newDocs/doxx_template.css
@@ -1,3 +1,7 @@
+ul.mycoll{
+	display: none;
+}
+
 span.codetoggle{
 	cursor: pointer;
 	color: #ff66cc;
